force-app/main/default/objects/Instalacao__c/Instalacao__c.object-meta.xml
<CustomObject>
    <label>Pendentes instalações</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Número de Instalação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pendentes instalações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>