force-app/main/default/objects/Instalacao__c/fields/Abrir_Assistencia_Tecnica_Tampo_de_Pedra__c.field-meta.xml
<CustomField>
    <fullName>Abrir_Assistencia_Tecnica_Tampo_de_Pedra__c</fullName>
    <label>Abrir Assistência Técnica Tampo de Pedra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>