force-app/main/default/objects/Instalacao__c/fields/Certificado_Devolucao_recolha_de_sobra__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Devolucao_recolha_de_sobra__c</fullName>
    <label>Certificado Devolução recolha de sobra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>