force-app/main/default/objects/Instalacao__c/fields/Data_efetiva_combinada_clienteATPedra__c.field-meta.xml
<CustomField>
    <fullName>Data_efetiva_combinada_clienteATPedra__c</fullName>
    <label>Data efetiva combinada c/ cliente</label>
    <type>Date</type>
</CustomField>