force-app/main/default/objects/Instalacao__c/fields/Encerramento_da_Incidencia_de_Sobras__c.field-meta.xml
<CustomField>
    <fullName>Encerramento_da_Incidencia_de_Sobras__c</fullName>
    <label>Encerramento da Incidência de Sobras</label>
    <type>Date</type>
</CustomField>