force-app/main/default/objects/Instalacao__c/fields/Encomenda_dos_tampos_retificados__c.field-meta.xml
<CustomField>
    <fullName>Encomenda_dos_tampos_retificados__c</fullName>
    <label>Encomenda dos tampos retificados</label>
    <type>Date</type>
</CustomField>