force-app/main/default/objects/Instalacao__c/fields/Entrega_do_Tampo_Combinada_c_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Entrega_do_Tampo_Combinada_c_Cliente__c</fullName>
    <label>Entrega do Tampo Combinada c/ Cliente</label>
    <type>Date</type>
</CustomField>