force-app/main/default/objects/Instalacao__c/fields/Entrega_Instalacao_Tampo_Retificado__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Instalacao_Tampo_Retificado__c</fullName>
    <label>Entrega e Instalação Tampo Retificado</label>
    <type>Date</type>
</CustomField>