force-app/main/default/objects/Instalacao__c/fields/Final_da_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Final_da_Instalacao__c</fullName>
    <label>Final da Instalação</label>
    <type>Date</type>
</CustomField>