force-app/main/default/objects/Instalacao__c/fields/Incidencia_Encerrada_do_TampoSN__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_Encerrada_do_TampoSN__c</fullName>
    <formula>IF( ISBLANK( Entrega_Instalacao_Tampo_Retificado__c ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incidência Encerrada do Tampo</label>
    <type>Checkbox</type>
</CustomField>