force-app/main/default/objects/Instalacao__c/fields/Incidencia_Encerrada_SobrasSN__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_Encerrada_SobrasSN__c</fullName>
    <formula>and
(IF( ISBLANK( Encerramento_da_Incidencia_de_Sobras__c) , false, true),
ISPICKVAL( Certificado_Devolucao_recolha_de_sobra__c , &apos;SIM&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incidência Encerrada</label>
    <type>Checkbox</type>
</CustomField>