force-app/main/default/objects/Instalacao__c/fields/Incidencia_EncerradaSN__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_EncerradaSN__c</fullName>
    <formula>and 
(IF( ISBLANK( Resolucao_de_Incidencia__c ) , false, true),
 ISPICKVAL(Abrir_Assistencia_Tecnica_de_Incidencia__c, &apos;SIM&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incidência Encerrada</label>
    <type>Checkbox</type>
</CustomField>