force-app/main/default/objects/Instalacao__c/fields/Inicio_de_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Instalacao__c</fullName>
    <label>Início de Instalação</label>
    <type>Date</type>
</CustomField>