force-app/main/default/objects/Instalacao__c/fields/Instalacao_Concluida__c.field-meta.xml
<CustomField>
    <fullName>Instalacao_Concluida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instalação Concluída</label>
    <type>Checkbox</type>
</CustomField>