force-app/main/default/objects/Instalacao__c/fields/Instalacao_Encerrada__c.field-meta.xml
<CustomField>
    <fullName>Instalacao_Encerrada__c</fullName>
    <formula>and
(
IF(ISBLANK( Final_da_Instalacao__c) , false, true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalação Encerrada</label>
    <type>Checkbox</type>
</CustomField>