force-app/main/default/objects/Instalacao__c/fields/Lista_de_recolha_de_sobra_e_reembolso__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_recolha_de_sobra_e_reembolso__c</fullName>
    <label>Lista de recolha de sobra e reembolso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>