force-app/main/default/objects/Instalacao__c/fields/N_Assistencia_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>N_Assistencia_Tecnica__c</fullName>
    <label>N.º Assistência Técnica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>