force-app/main/default/objects/Instalacao__c/fields/N_da_Loja__c.field-meta.xml
<CustomField>
    <fullName>N_da_Loja__c</fullName>
    <label>Nº da Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>