force-app/main/default/objects/Instalacao__c/fields/N_da_loja_para_AT__c.field-meta.xml
<CustomField>
    <fullName>N_da_loja_para_AT__c</fullName>
    <label>Nº da loja para AT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>