force-app/main/default/objects/Instalacao__c/fields/N_da_Ordem_de_Servico__c.field-meta.xml
<CustomField>
    <fullName>N_da_Ordem_de_Servico__c</fullName>
    <label>Nº da Ordem de Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>