force-app/main/default/objects/Instalacao__c/fields/N_de_Pedido_a_cliente__c.field-meta.xml
<CustomField>
    <fullName>N_de_Pedido_a_cliente__c</fullName>
    <label>Nº de Pedido a cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>