force-app/main/default/objects/Instalacao__c/fields/N_do_Certificado_de_Devolucao__c.field-meta.xml
<CustomField>
    <fullName>N_do_Certificado_de_Devolucao__c</fullName>
    <label>Nº do Certificado de Devolução</label>
    <length>255</length>
    <type>Text</type>
</CustomField>