force-app/main/default/objects/Instalacao__c/fields/Nome_do_Instalador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Instalador__c</fullName>
    <label>Nome do Instalador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>