force-app/main/default/objects/Instalacao__c/fields/Nome_do_Instalador_que_resolveu__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Instalador_que_resolveu__c</fullName>
    <label>Nome do Instalador que resolveu</label>
    <length>80</length>
    <type>Text</type>
</CustomField>