force-app/main/default/objects/Instalacao__c/fields/P_O_Emitida__c.field-meta.xml
<CustomField>
    <fullName>P_O_Emitida__c</fullName>
    <label>P.O. Emitida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>