force-app/main/default/objects/Instalacao__c/fields/Primeira_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Primeira_Instalacao__c</fullName>
    <label>1ª Data de Instalação</label>
    <type>Date</type>
</CustomField>