force-app/main/default/objects/Instalacao__c/fields/Promessa__c.field-meta.xml
<CustomField>
    <fullName>Promessa__c</fullName>
    <label>Instalação combinada c/ cliente</label>
    <type>Date</type>
</CustomField>