force-app/main/default/objects/Instalacao__c/fields/Resolucao_de_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>Resolucao_de_Incidencia__c</fullName>
    <label>Resolução de Incidencia</label>
    <type>Date</type>
</CustomField>