force-app/main/default/objects/Instalacao__c/fields/Resolucao_de_incidencias_de_Sobras__c.field-meta.xml
<CustomField>
    <fullName>Resolucao_de_incidencias_de_Sobras__c</fullName>
    <label>Resolução de incidências de Sobras</label>
    <type>Date</type>
</CustomField>