force-app/main/default/objects/Instalacao__c/fields/Retificacao_de_medidas_de_tampo_de_pedra__c.field-meta.xml
<CustomField>
    <fullName>Retificacao_de_medidas_de_tampo_de_pedra__c</fullName>
    <label>Retificação de medidas de tampo de pedra</label>
    <type>Date</type>
</CustomField>