force-app/main/default/objects/Instalacao__c/fields/Segunda_Data_de_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Segunda_Data_de_Instalacao__c</fullName>
    <label>2ª Data de Instalação</label>
    <type>Date</type>
</CustomField>