force-app/main/default/objects/Instalacao__c/fields/Valor_da_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Instalacao__c</fullName>
    <label>Valor da Instalação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>