force-app/main/default/objects/Instalacao__c/fields/Valor_da_Instalacao_Assistencia__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Instalacao_Assistencia__c</fullName>
    <label>Valor da Instalação Assistência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>