force-app/main/default/objects/Instalacao__c/validationRules/Preencher_Data_combinada_cliente_ATPedra.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_Data_combinada_cliente_ATPedra</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(  Abrir_Assistencia_Tecnica_Tampo_de_Pedra__c , &apos;SIM&apos;),

ISBLANK(  Data_combinada_clienteATPedra__c )

)</errorConditionFormula>
    <errorDisplayField>Data_combinada_clienteATPedra__c</errorDisplayField>
    <errorMessage>Preencher o campo Data combinada c/ cliente na Assistência técnica do Tampo de Pedra</errorMessage>
</ValidationRule>