force-app/main/default/objects/Instalacao__c/validationRules/Preencher_Data_de_Reembolso.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_Data_de_Reembolso</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISPICKVAL(Solicitado_Reembolso_a_caixas__c, &apos;SIM&apos;),
ISBLANK(Pedido_de_Reembolso__c )
)</errorConditionFormula>
    <errorDisplayField>Pedido_de_Reembolso__c</errorDisplayField>
    <errorMessage>Deve Preencher a Data de Reembolso</errorMessage>
</ValidationRule>