force-app/main/default/objects/Instalacao__c/validationRules/Preencher_Data_Final_Da_Instalacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_Data_Final_Da_Instalacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( Instalacao_Concluida__c , true ,

ISBLANK( Final_da_Instalacao__c )

)</errorConditionFormula>
    <errorDisplayField>Final_da_Instalacao__c</errorDisplayField>
    <errorMessage>Preencher o campo Data Final da Instalação antes de marcar a Instalação Concluída</errorMessage>
</ValidationRule>